--- a/SIGTR/users/templates/users/vistaInicial.html
+++ b/SIGTR/users/templates/users/vistaInicial.html
@@ -202,7 +202,7 @@
     </div>
     <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script> <!--para la ubicación en tiempo real-->
-    
+    <script src="{% static 'dashboard/js/clientes/mapa.js' %}"></script>
     <script>
         function login(){
             window.location.href = "{% url 'users:login' %}"; 
