Antivirus actualizado y fix de errores en Achivos Temp.

--- a/SIGTR/dashboard/templates/dashboard/base_dashboard.html
+++ b/SIGTR/dashboard/templates/dashboard/base_dashboard.html
@@ -183,7 +183,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item mt-auto">
-                    <a class="nav-link text-danger" href="{% url 'logout' %}">
+                    <a class="nav-link text-danger" href="{% url 'users:logout' %}">
                         <i class="fas fa-sign-out-alt me-2"></i> Cerrar Sesión
                     </a>
                 </li>
