--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -112,8 +112,17 @@
                         </audio>
                     </div>
                     <div class="mensajeIA" id="mensajeIA">
-                        <input class="textIA" id="textIAID" type="text" placeholder="Envía un mensaje a ICASOFT IA"><i
-                            class="fa-solid fa-paper-plane enviarMessage"></i>
+                        <div class="header-chat" id="header-chat">
+                            <h1>ICASOFT IA</h1>
+                        </div>
+                        <div class="body-chat" id="body-chat">
+                            <p class="message_chat">Hola</p>
+                            <p class="message_chat_user">Hi</p>
+                        </div>
+                        <div class="footer-chat" id="footer-chat">
+                            <div class="textIACont"><input id="textIAID" type="text" placeholder="Envía un mensaje a ICASOFT IA"></div>
+                            <div class="contentChatBtn"><button class="btnChat"><i class="fa-solid fa-paper-plane enviarMessage"></i></button></div>
+                        </div>
                     </div>
                     <div class="vozIA" id="vozIA">
                         <label for="" class="textoVoz">AYÚDAME</label>
