--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -12,6 +12,8 @@
 :root {
     --fondoDiv: linear-gradient(180deg, rgb(37, 36, 36), rgb(43, 67, 84), rgb(37, 36, 36));
     --fondoBotones: linear-gradient(180deg, rgb(54, 56, 57), rgb(42, 76, 89));
+    --sombrasContent: 5px 10px 10px -8px rgb(3, 101, 140);
+    --borde: rgb(3, 101, 140);
 }
 
 body {
@@ -450,24 +452,36 @@ body {
 .mensajeIA {
     grid-area: mensajeIA;
     display: grid;
-    grid-template-areas: "textIA enviarMessage";
     width: 80%;
+    border: 1px solid var(--borde);
+    border-radius: 30px;
+}
+#mensajeIA .header-chat, .body-chat{
+    display: none;
+}
+.header-chat{
+    background-color: #007ea7;
+    color: white;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+.footer-chat{
+    display: grid;
+    grid-template-areas: "textIACont contentChatBtn";
     border: 1px solid;
     border-radius: 30px;
-    height: 60%;
+    height: 100%;
+    width: 100%;
     color: black;
+    background: white;
     text-align: center;
     font-size: 20px;
     font-style: oblique;
-    background: white;
-    padding: 10px 0px 10px 0px;
     align-items: center;
 }
-
 .textIA {
-    background: none;
+    background: white;
     border: none;
-    padding: 0px 0px 0px 20px;
     outline: none;
     font-size: 20px;
 }
@@ -486,7 +500,7 @@ body {
     height: 100%;
     border: 2px solid rgb(42, 76, 89);
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(38, 40, 40));
-    box-shadow: 5px 10px 10px -8px rgb(3, 101, 140);
+    box-shadow: var(--sombrasContent);
     border-radius: 30px;
     color: white;
     cursor: pointer;
@@ -925,7 +939,7 @@ body {
             "mensajeIA"
             "vozIA ";
         gap: 10px;
-        grid-template-rows: auto !important;
+        grid-template-rows: auto;
         justify-items: center;
         width: 100%;
         height: 100%;
