--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -65,7 +65,7 @@
                     <div class="datosDesktop">
                         <div class="datoHW">
                             <div class="IconHW"><i class="fa-solid fa-temperature-arrow-down temperaturaCPU"></i></div>
-                            <div class="valorHW">CPU: 60°C</div>
+                            <div class="valorHW" id="useCPU"></div>
                         </div>
                         <div class="datoHW">
                             <div class="IconHW"><i class="fa-regular fa-file temperaturaRAM"></i></div>
@@ -117,8 +117,8 @@
                             <h1>ICASOFT IA</h1>
                         </div>
                         <div class="body-chat" id="body-chat">
-                            <p class="message_chat">Hola</p>
-                            <p class="message_chat_user">Hi</p>
+                            <div class="iaResponse"><p class="message_chat">Hola</p></div>
+                            <div class="userRequest"><p class="message_chat_user">Hi</p></div>
                         </div>
                         <div class="footer-chat" id="footer-chat">
                             <div class="textIACont"><input id="textIAID" type="text" placeholder="Envía un mensaje a ICASOFT IA"></div>
