--- a/SIGTR/dashboard/static/dashboard/css/modalInicio.css
+++ b/SIGTR/dashboard/static/dashboard/css/modalInicio.css
@@ -128,7 +128,7 @@
 .contentMonitoreoGrafico {
     display: grid;
     grid-template-areas:
-        "detalleGraficoMonitoreo" "coloresMonitoreo";
+        "coloresMonitoreo" "detalleGraficoMonitoreo";
 }
 
 .coloresMonitoreo {
@@ -140,8 +140,8 @@
 }
 
 #donutsTickets {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
 
 }
 
@@ -178,10 +178,10 @@
         "contentCompHW contentHW";
     grid-template-columns: 30% auto;
     width: 100%;
+    background: rgba(250, 250, 250, 0.063);
 }
 
 #modalMonitoreo .contentCompHW {
-    background: #fafafa10;
     backdrop-filter: blur(0.4rem);
     -webkit-backdrop-filter: blur(0.4rem);
     border-radius: 10px;
@@ -1176,7 +1176,10 @@
     background-color: #2c3e50;
     color: white;
 }
-
+.fila-resaltada {
+    background-color: rgba(155, 236, 42, 0.2); /* Amarillo clarito */
+    font-weight: bold;
+}
 .tabla-historial th,
 .tabla-historial td {
     border: 1px solid #34495e;
@@ -1294,14 +1297,14 @@
     display: grid;
     grid-template-areas: "contentConsejos contentConsejos" "contentConsejos contentConsejos";
     column-gap: 15px;
+    row-gap: 15px;
     grid-template-columns: 50%;
 }
 
-.videoYT {
+iframe.videoYt {
     width: 100%;
     height: 100%;
 }
-
 /* #modalAprendizaje .centro {
     display: grid;
 }
@@ -1323,6 +1326,7 @@
     display: grid;
     grid-template-areas: "textConsejo" "contentBtnCnetro";
     align-items: center;
+    gap:10px;
 }
 
 .contentCentro .textConsejo {
